--- a/patfeed2.html
+++ b/patfeed2.html
@@ -305,7 +305,7 @@
 
           <div class="row">
             <div class="quiz-link">
-              <img src="https://dummyimage.com/400x250/aaa/fff">
+              <img src="img2/business.jpg">
               <h4><a href "https://abrown1.github.io/Patfeed_quiz1/"> We can guess your future job </a></h4>
             </div>
 
